[package]
name = "id2203"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/PeteCui/omnipaxos" }
omnipaxos_runtime = { git = "https://github.com/PeteCui/omnipaxos" }
tokio = { version = "1.16.1", features = ["sync", "macros"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"